tests/transpiler/x/swift/substring_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden4234630740/025/main.swift:2:7: error: cannot find 'substring' in scope
1 | // Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:42 GMT+7
2 | print(substring("mochi", 1, 4))
  |       `- error: cannot find 'substring' in scope
3 | 
