tests/transpiler/x/swift/substring_builtin.swift
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:42 GMT+7
print(substring("mochi", 1, 4))
